--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,7 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
 
   font-weight: normal;
 }
@@ -18,7 +18,7 @@ a,
 
 @media (hover: hover) {
   a:hover {
-    /* background-color: hsla(212, 100%, 37%, 0.2); */
+    background-color: hsla(212, 100%, 37%, 0.2);
     text-decoration: underline;
     text-decoration-color: rgb(38, 126, 185);
   }
@@ -28,11 +28,5 @@ a,
   body {
     display: flex;
     place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr;
-    padding: 0 2rem;
   }
 }
