--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,10 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  max-width: 96vw;
   margin: 0 auto;
+  width: 1024px;
   /* padding: 2rem; */
-
   font-weight: normal;
 }
 
@@ -20,7 +20,6 @@ a,
   a:hover {
     background-color: hsla(212, 100%, 37%, 0.2);
     text-decoration: underline;
-    /* text-decoration-color: var(--color-highlight); */
   }
 }
 
