--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,7 +34,8 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
-  --color-highlight: rgb(38, 126, 185)
+  --color-highlight: rgb(38, 126, 185);
+  --color-contrast: #ff512f;
 }
 
 @media (prefers-color-scheme: dark) {
